# ghc-win-io-system

./: .gitignore  GNUmakefile  LICENSE  README.md  Winsock.hsc  changelog.md  ghc.mk  iocp.cabal  prologue.txt  win-io-mngr.cabal
GHC/Event/: Array.hs  IntMap.hs  IntTable.hs  PSQ.hs  Windows.hs
GHC/Event/Windows/: Clock.hs  FFI.hsc  Thread.hs  Worker.hs
GHC/IO/Windows/: Encoding.hs  Handle.hsc
IOCP/: Manager.hs  PSQ.hs
Network/: Winsock.hsc
System/IO/: IOCP.hsc
cbits/: IOUtils.c  Winsock.c
include/: windows_cconv.h
testing/: clock.hs  close-while-pending.hs  close-without-shutdown.hs  file-baseline.hs  file.hs  monotonic-time.hs  pong-baseline.hs  pong.hs  recv-bench.hs  recv.hs  send-buffer-full.hs  send-recv.hs  send.hs  thread-delay-baseline.hs  thread-delay.hs  trivial.hs
