name:               iocp
version:            0.1
synopsis:           Nursery for a GHC IO manager using Windows completion ports
-- description:
homepage:           https://github.com/23Skidoo/haskell-iocp
license:            BSD3
license-file:       LICENSE
author:             Joey Adams, Mikhail Glushenkov
maintainer:         mikhail.glushenkov@gmail.com
copyright:          Copyright (c) Joseph Adams 2012,
                    Copyright (c) Mikhail Glushenkov 2016
category:           System
build-type:         Simple
cabal-version:      >=1.8

extra-source-files:

source-repository head
    type:       git
    location:   git://github.com/23Skidoo/haskell-iocp.git

library
    exposed-modules:
        GHC.Event.PSQ
        GHC.Event.Unique
        GHC.Event.Windows
        GHC.Event.Windows.Clock
        GHC.Event.Windows.FFI
        GHC.Event.Windows.Thread
        Network.Winsock

    c-sources:
        cbits/dynamic.c
        cbits/iocp.c
        cbits/Winsock.c

    build-tools: hsc2hs

    ghc-options: -Wall -fwarn-tabs -fno-warn-missing-signatures
    cc-options: -Wall

    build-depends   : base == 4.*
                    , bytestring
                    , containers
                    , Win32
                    , network

executable clock
    main-is: clock.hs
    hs-source-dirs: testing
    build-depends: ansi-terminal, base, iocp
    ghc-options: -threaded

executable close-while-pending
    main-is: close-while-pending.hs
    hs-source-dirs: testing
    build-depends: base, bytestring, iocp, network
    ghc-options: -threaded

executable close-without-shutdown
    main-is: close-without-shutdown.hs
    hs-source-dirs: testing
    build-depends: base, bytestring, iocp, network
    ghc-options: -threaded

executable monotonic-time
    main-is: monotonic-time.hs
    hs-source-dirs: testing
    build-depends: ansi-terminal, base, iocp
    ghc-options: -threaded

executable recv-bench
    main-is: recv-bench.hs
    hs-source-dirs: testing
    build-depends: base, bytestring, criterion, iocp, network
    ghc-options: -threaded

executable recv
    main-is: recv.hs
    hs-source-dirs: testing
    build-depends: base, iocp, network
    ghc-options: -threaded

executable send-buffer-full
    main-is: send-buffer-full.hs
    hs-source-dirs: testing
    build-depends: base, bytestring, iocp, network
    ghc-options: -threaded

executable send
    main-is: send.hs
    hs-source-dirs: testing
    build-depends: base, bytestring, iocp, network
    ghc-options: -threaded

executable send-recv
    main-is: send-recv.hs
    hs-source-dirs: testing
    build-depends: base, bytestring, iocp, network
    ghc-options: -threaded

executable trivial
    main-is: trivial.hs
    hs-source-dirs: testing
    build-depends: base, iocp, network
    ghc-options: -threaded
