name:               iocp
version:            0.1
synopsis:           Nursery for a GHC IO manager using Windows completion ports
-- description:
homepage:           https://github.com/23Skidoo/haskell-iocp
license:            BSD3
license-file:       LICENSE
author:             Joey Adams, Mikhail Glushenkov
maintainer:         mikhail.glushenkov@gmail.com
copyright:          Copyright (c) Joseph Adams 2012,
                    Copyright (c) Mikhail Glushenkov 2016
category:           System
build-type:         Simple
cabal-version:      >=1.8

extra-source-files:

source-repository head
    type:       git
    location:   git://github.com/23Skidoo/haskell-iocp.git

library
    exposed-modules:
        GHC.Event.Arr
        GHC.Event.Array
        GHC.Event.IntTable
        GHC.Event.PSQ
        GHC.Event.Unique
        GHC.Event.Windows
        GHC.Event.Windows.Clock
        GHC.Event.Windows.FFI
        GHC.Event.Windows.Thread
        Network.Winsock

    c-sources:
        cbits/iocp.c
        cbits/Winsock.c

    build-tools: hsc2hs

    ghc-options: -Wall -fwarn-tabs -fno-warn-missing-signatures
    cc-options: -Wall

    build-depends   : base == 4.*
                    , ghc-prim
                    , bytestring
                    , containers
                    , Win32
                    , network

flag all-tests
    Description: Enable all test exes
    Default:     False

executable pong
    main-is: pong.hs
    hs-source-dirs: testing
    build-depends: ansi-terminal, base, bytestring, iocp, network
    ghc-options: -threaded -rtsopts

executable pong-baseline
    main-is: pong-baseline.hs
    hs-source-dirs: testing
    build-depends: ansi-terminal, base, bytestring, iocp, network
    ghc-options: -threaded -rtsopts

executable file
    main-is: file.hs
    hs-source-dirs: testing
    build-depends: ansi-terminal, base, bytestring, iocp, network
    ghc-options: -threaded -rtsopts
    if flag(all-tests)
       buildable: True
    else
       buildable: False

executable file-baseline
    main-is: file-baseline.hs
    hs-source-dirs: testing
    build-depends: ansi-terminal, base, bytestring, iocp, network
    ghc-options: -threaded -rtsopts
    if flag(all-tests)
       buildable: True
    else
       buildable: False

executable clock
    main-is: clock.hs
    hs-source-dirs: testing
    build-depends: ansi-terminal, base, iocp
    ghc-options: -threaded -rtsopts
    if flag(all-tests)
       buildable: True
    else
       buildable: False

executable close-while-pending
    main-is: close-while-pending.hs
    hs-source-dirs: testing
    build-depends: base, bytestring, iocp, network
    ghc-options: -threaded -rtsopts
    if flag(all-tests)
       buildable: True
    else
       buildable: False

executable close-without-shutdown
    main-is: close-without-shutdown.hs
    hs-source-dirs: testing
    build-depends: base, bytestring, iocp, network
    ghc-options: -threaded -rtsopts
    if flag(all-tests)
       buildable: True
    else
       buildable: False

executable monotonic-time
    main-is: monotonic-time.hs
    hs-source-dirs: testing
    build-depends: ansi-terminal, base, iocp
    ghc-options: -threaded -rtsopts
    if flag(all-tests)
       buildable: True
    else
       buildable: False

executable recv-bench
    main-is: recv-bench.hs
    hs-source-dirs: testing
    build-depends: base, bytestring, criterion, iocp, network
    ghc-options: -threaded -rtsopts

executable recv
    main-is: recv.hs
    hs-source-dirs: testing
    build-depends: base, iocp, network
    ghc-options: -threaded -rtsopts
    if flag(all-tests)
       buildable: True
    else
       buildable: False

executable send-buffer-full
    main-is: send-buffer-full.hs
    hs-source-dirs: testing
    build-depends: base, bytestring, iocp, network
    ghc-options: -threaded -rtsopts
    if flag(all-tests)
       buildable: True
    else
       buildable: False

executable send
    main-is: send.hs
    hs-source-dirs: testing
    build-depends: base, bytestring, iocp, network
    ghc-options: -threaded -rtsopts

executable send-recv
    main-is: send-recv.hs
    hs-source-dirs: testing
    build-depends: base, bytestring, iocp, network
    ghc-options: -threaded -rtsopts
    if flag(all-tests)
       buildable: True
    else
       buildable: False

executable trivial
    main-is: trivial.hs
    hs-source-dirs: testing
    build-depends: base, iocp, network
    ghc-options: -threaded -rtsopts
    if flag(all-tests)
       buildable: True
    else
       buildable: False
